[tool.poetry]
name = "blogs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
uuid7 = "^0.1.0"
psycopg2-binary = "^2.9.9"
wheel = "^0.43.0"
asyncpg = "^0.29.0"
ruff = "^0.3.7"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
